# text-compare-2

./: alembic.ini  main.py  postgrest.conf  pyproject.toml
alembic/: env.py
alembic/versions/: f12b1e825acc_.py
api/: stats.py  texts.py
api/utils/: comparisons.py  jwt.py  models.py  request_count.py  similarities.py  texts.py
db/: db_setup.py
db/models/: comparison.py  mixins.py  request_count.py  text.py
pydantic_schemas/: compare.py  request.py  text.py
