[tool.poetry]
name = "text-compare-2"
version = "0.1.0"
description = ""
authors = ["Sujin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
postgrest = "^0.16.4"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
fastapi = "^0.111.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
transformers = "^4.41.0"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
